--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,8 +8,8 @@ jobs:
     name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
-      - name: Login to Docker hub
-        uses: docker/login-action
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
