--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USER_CASE_COMMUNITY_RELIABILITY }}
+          password: ${{ secrets.DOCKERHUB_TOKEN_CASE_COMMUNITY_RELIABILITY }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
