--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,15 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
-      - DB_DB=devdb
+      - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASSWORD=devpassword
+      - DEBUG=1
     depends_on:
       - db
   
@@ -28,6 +31,8 @@ services:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=devpassword
+    ports:
+      - "5432:5432"
 
 volumes:
   dev-db-data:
